crates/pgls_pretty_print/tests/snapshots/multi/tests__infinite_recurse_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/infinite_recurse_60.sql
snapshot_kind: text
---
CREATE FUNCTION infinite_recurse()
RETURNS INT
AS 'select infinite_recurse()'
LANGUAGE "sql";

SELECT version() ~ 'powerpc64[^,]*-linux-gnu' AS skip_test;

SELECT infinite_recurse();
