crates/pgls_pretty_print/tests/snapshots/multi/tests__infinite_recurse_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/infinite_recurse.sql
---
create function infinite_recurse()
returns int
as $function$
select infinite_recurse()
$function$
language sql;

select version() ~ 'powerpc64[^,]*-linux-gnu' as skip_test;

select infinite_recurse();
